# spectran

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
.github/workflows/: create_release.yml  publish.yml
examples/: api_example.py
src/specky/: __init__.py  main_ui.py  main_window.py  plots.py  settings.py
src/spectran/: __init__.py  __main__.py  api.py  app.py  daq.py  data_handler.py  main_ui.py  main_window.py  measurement.py  plots.py  settings.py  utils.py  windows.py
src/spectran/daq/: __init__.py  daq.py  nidaqmx.py  niscope.py
src/spectran/data/: api.html
tests/: test_daq.py  test_niscope.py  test_utils.py
